@@ -1,3 +1,4 @@
+* Allow posted landed cost to be cancelled
 * Add landed cost relate from supplier shipment
 * Rename landed cost state from cancel to cancelled
 
